5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1749_3088.log
== TEST (2019-05-15 18:15:31) 
-- CODE:
cont=0
num=int(input("numero: "))
while(n!=0):
	cont=cont+num
print(num)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(n!=0):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:15:43) 
-- CODE:
cont=0
num=int(input("numero: "))
while(num!=0):
	cont=cont+num
print(num)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(n!=0):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:16:00) 
-- CODE:
cont=0
num=int(input("numero: "))
while(num!=0):
	cont=cont+num
print(num)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(n!=0):
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:16:32) 
-- CODE:
cont=0
num=int(input("numero: "))
while(num!=0):
	cont=cont+num
	print(num)
	int(input("numero: "))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:27:44) 
-- CODE:
cont=
num=int(input("numero: "))
while(num!=-1):
	b=num//2
	print("par")
if
	
	
-- ERROR:
File "XXXX", line 1
    cont=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:28:34) 
-- CODE:
cont=
num=int(input("numero: "))
while(num!=-1):
	b=num//2
	print("par")
	c=num//2
	print("impar=")
	
	
-- ERROR:
File "XXXX", line 1
    cont=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:28:35) 
-- CODE:
cont=
num=int(input("numero: "))
while(num!=-1):
	b=num//2
	print("par")
	c=num//2
	print("impar=")
	
	
-- ERROR:
File "XXXX", line 1
    cont=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:28:37) 
-- CODE:
cont=
num=int(input("numero: "))
while(num!=-1):
	b=num//2
	print("par")
	c=num//2
	print("impar=")
	
	
-- ERROR:
File "XXXX", line 1
    cont=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:28:40) 
-- CODE:
cont=0
num=int(input("numero: "))
while(num!=-1):
	b=num//2
	print("par")
	c=num//2
	print("impar=")
	
	
-- OUTPUT:
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:29:08) 
-- CODE:
cont=0
num=int(input("numero: "))
while(num!=-1):
	b=num//2
	print("par")
	c=num//2
	print("impar=")
	
	
-- OUTPUT:
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
par
impar=
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
